# agentrecruiter

./: .env  README.md  pyproject.toml
bestpractice/: config.py  main.py
bestpractice/models/: schemas.py
bestpractice/services/: candidate_evaluator.py  document_parser.py  embedding_service.py  llm_evaluator.py  vector_store.py
bestpractice/static/: index.html  script.js  style.css
bestpractice/utils/: text_processing.py
